# HellYeahBot

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint_and_types.yaml
