[tool.poetry]
name = "hell-yeah-bot"
version = "0.1.0"
description = "Twitch bot for HellYeahPlay"
authors = ["Илья Нестеренко <ilya-nest@yandex.ru>"]
readme = "README.md"
packages = [{include = "hell_yeah_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.255"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

select = [
  "F", 
  "E", 
  "W", 
  "C90", 
  "I", 
  "N", 
  "S", 
  "B", 
  "A", 
  "ISC", 
  "T20", 
  "Q", 
  "PTH"
]
ignore = ["A003"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "venv",
]

